[gd_scene load_steps=23 format=2]

[ext_resource path="res://Levels/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://Enemys/Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemys/Sprites/KABANG!_ENEMY_TEST.png" type="Texture" id=3]
[ext_resource path="res://Enemys/Scenes/TextureProgress.gd" type="Script" id=4]
[ext_resource path="res://Enemys/Scenes/Emitter.gd" type="Script" id=5]
[ext_resource path="res://Enemys/Scenes/Forcefield.gd" type="Script" id=6]
[ext_resource path="res://Enemys/Scenes/Field.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 52, 52 )

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 0.147002 )
colors = PoolColorArray( 0, 0, 0, 0, 0.858824, 0.254902, 0.380392, 1 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="Curve" id=4]

min_value = -400.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0.000552485, -1.52588e-05 ), -750.634, -1371.32, 0, 0, Vector2( 1, -400 ), 0.601589, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

flags = 4
width = 4096
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]

min_value = -200.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0, -200 ), 0.0, 0.0, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]

flags = 4
width = 2048
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]

min_value = -200.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0, 4.08197 ), 0.0, 1067.0, 0, 0, Vector2( 0.998732, 195.935 ), 1267.72, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]

flags = 4
width = 2048
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 135.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
linear_accel_curve = SubResource( 5 )
radial_accel = 0.0
radial_accel_random = 0.0
radial_accel_curve = SubResource( 7 )
tangential_accel = 0.0
tangential_accel_random = 0.0
tangential_accel_curve = SubResource( 9 )
damping = 0.0
damping_random = 0.0
angle = 90.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Spread", "Tangential Accel" ]

[sub_resource type="Gradient" id=11]

offsets = PoolRealArray( 0.348162, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.858824, 0.254902, 0.380392, 1 )

[sub_resource type="GradientTexture" id=12]

flags = 4
gradient = SubResource( 11 )
width = 2048

[sub_resource type="ParticlesMaterial" id=13]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.0
angular_velocity = 360.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 5.0
scale_random = 0.0
color_ramp = SubResource( 12 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Initial Velocity", "Scale", "Tangential Accel", "Trail" ]

[sub_resource type="Animation" id=14]

resource_name = "field_grow"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Field/FieldCollision:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 9, 9 ) ]
}

[sub_resource type="CircleShape2D" id=15]

custom_solver_bias = 0.0
radius = 32.0

[node name="EnemySpawner" type="Area2D" groups=[
"Enemy_spawner",
]]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
Enemy_Scene = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Builder" type="TextureProgress" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 5.0
step = 0.0
page = 0.0
value = 5.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
fill_mode = 4
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Position2D" type="Position2D" parent="." index="2"]

_sections_unfolded = [ "Transform" ]

[node name="Vacuum" type="Particles2D" parent="." index="3"]

scale = Vector2( 8, 8 )
emitting = true
amount = 300
lifetime = 4.0
one_shot = false
preprocess = 5.0
speed_scale = 4.0
explosiveness = 0.0
randomness = 1.0
fixed_fps = 60
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 10 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform", "Visibility" ]

[node name="Spawn_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Particle_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.15
one_shot = true
autostart = false

[node name="Forcefield" type="Particles2D" parent="." index="6"]

editor/display_folded = true
emitting = false
amount = 1000
lifetime = 0.5
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.95
randomness = 0.0
fixed_fps = 60
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 13 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Process Material", "Time" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Forcefield" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/field_grow = SubResource( 14 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Field" type="StaticBody2D" parent="Forcefield" index="1"]

input_pickable = false
collision_layer = 2
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 7 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="FieldCollision" type="CollisionShape2D" parent="Forcefield/Field" index="0"]

shape = SubResource( 15 )
_sections_unfolded = [ "Transform", "Z Index" ]

[connection signal="timeout" from="Spawn_timer" to="." method="_on_Spawn_timer_timeout"]

[connection signal="timeout" from="Particle_timer" to="." method="_on_Particle_timer_timeout"]


